@@ -1,5 +1,16 @@
 2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
+	* unix/tclUnixCompat.c (TclpGetHostByName): The six-argument form of
+	getaddressbyname_r() uses the fifth argument to indicate whether the
+	lookup succeeded or not on at least one platform. [Bug 1618235]
+
+2007-11-13  Don Porter	<dgp@users.sourceforge.net>
+
+	* generic/regcomp.c:	Convert optst() from expensive no-op to a
+	cheap no-op.
+
+2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
 	* unix/tclUnixChan.c (CreateSocketAddress): Rewrote to use the
 	thread-safe version of gethostbyname() by forward-porting the code
 	used in 8.4, and added rudimentary support for getaddrinfo() (not
